Styling with CSS - removed borders, changed fonts, changed colors, styled button

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles/journal.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Daily Journal</h1>
+    <section class="headingContainer">
+        <h1>Daily Journal</h1>
+    </section>
+    
+<section class="fieldsContaner"> 
     <form action="">
         <fieldset class="dateContainer">
             <label for="journalDate">Date of entry</label>
@@ -40,6 +45,9 @@
             </select>
         </fieldset>
     </form>
-    <button type="submit">Record Journal Entry</button>
+</section>
+<section class="submitButtonContainer">
+    <button class="submitButton" type="submit">Record Journal Entry</button>
+</section>
 </body>
 </html>
