--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,27 @@
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
+                <div class="bar4"></div>
+                <div class="bar5"></div>
+                <div class="bar6"></div>
+                <div class="bar7"></div>
+                <div class="bar8"></div>
+                <div class="bar9"></div>
+                <div class="bar10"></div>
+                <div class="bar11"></div>
+                <div class="bar12"></div>
+                <div class="bar13"></div>
+                <div class="bar14"></div>
+                <div class="bar15"></div>
+                <div class="bar16"></div>
+                <div class="bar17"></div>
+                <div class="bar18"></div>
+                <div class="bar19"></div>
+                <div class="bar20"></div>
+                <div class="bar21"></div>
+                <div class="bar22"></div>
+                <div class="bar23"></div>
+                <div class="bar121"></div>
             </section>
     </section>
 
@@ -51,10 +72,11 @@
             </select>
         </fieldset>
     </form>
+    <section class="submitButtonContainer">
+        <button class="submitButton" type="submit">Record Journal Entry</button>
+    </section>
 </section>
-<section class="submitButtonContainer">
-    <button class="submitButton" type="submit">Record Journal Entry</button>
-</section>
+
 <article class="allEntries" id="entryLog">
 
 </article>
