--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,12 @@
             </section>
     </section>
 
+<section class="dailyJournalTitleContainer">
+    <h1 id ="scrollMagic" class="dailyJournalTitle">Journal</h1>
+</section>
+
 <section class="fieldsContainer disappear"> 
+    <input type="hidden" id="journalID" value="" />
     <form action="">
         <fieldset class="dateContainer">
             <label class="dateTitle" for="journalDate">Date of entry</label>
@@ -78,23 +83,28 @@
     </section>
 </section>
 
+<form action="" class="radioContainer">
+    <fieldset id="radioButton">
+        <legend>Display A Certain Mood</legend>
+        <input type="radio" name="mood" id="allRadio" value="All">
+        <label for="All">All</label>
+        <input type="radio" name="mood" id="greatRadio" value="Great!">
+        <label for="Great!">Great!</label>
+        <input type="radio" name="mood" id="goodRadio" value="Good">
+        <label for="Good">Good</label>
+        <input type="radio" name="mood" id="fineRadio" value="fine">
+        <label for="fine">fine</label>
+        <input type="radio" name="mood" id="notGoodRadio" value="not good">
+        <label for="not good">not good</label>
+        <input type="radio" name="mood" id="awfulRadio" value="awful">
+        <label for="awful">awful</label>
+    </fieldset>
+</form>
 <form action="">
-        <fieldset id="radioButton">
-            <legend>Display A Certain Mood</legend>
-            <input type="radio" name="mood" id="allRadio" value="All">
-            <label for="All">All</label>
-            <input type="radio" name="mood" id="greatRadio" value="Great!">
-            <label for="Great!">Great!</label>
-            <input type="radio" name="mood" id="goodRadio" value="Good">
-            <label for="Good">Good</label>
-            <input type="radio" name="mood" id="fineRadio" value="fine">
-            <label for="fine">fine</label>
-            <input type="radio" name="mood" id="notGoodRadio" value="not good">
-            <label for="not good">not good</label>
-            <input type="radio" name="mood" id="awfulRadio" value="awful">
-            <label for="awful">awful</label>
-        </fieldset>
-    </form>
+    <label for="search">Search Entries</label>
+    <input type="text" id="searchEntries">
+
+</form>
 <article class="allEntries" id="entryLog">
 
 </article>
