Search bar working

--- a/src/index.html
+++ b/src/index.html
@@ -86,21 +86,21 @@
 <form action="" class="radioContainer">
     <fieldset id="radioButton">
         <legend>Display A Certain Mood</legend>
-        <input type="radio" name="mood" id="allRadio" value="All">
-        <label for="All">All</label>
-        <input type="radio" name="mood" id="greatRadio" value="Great!">
-        <label for="Great!">Great!</label>
-        <input type="radio" name="mood" id="goodRadio" value="Good">
-        <label for="Good">Good</label>
-        <input type="radio" name="mood" id="fineRadio" value="fine">
-        <label for="fine">fine</label>
-        <input type="radio" name="mood" id="notGoodRadio" value="not good">
-        <label for="not good">not good</label>
-        <input type="radio" name="mood" id="awfulRadio" value="awful">
-        <label for="awful">awful</label>
+        <input type="radio" name="mood" value="All">
+        <label for="All"><span id="allRadio">All</span></label>
+        <input type="radio" name="mood" value="Great!">
+        <label for="Great!"><span id="greatRadio">Great!</span></label>
+        <input type="radio" name="mood" value="Good">
+        <label for="Good"><span id="goodRadio">Good</span></label>
+        <input type="radio" name="mood" value="fine">
+        <label for="fine"><span id="fineRadio">fine</span></label>
+        <input type="radio" name="mood" value="not good">
+        <label for="not good"><span id="notGoodRadio">not good</span></label>
+        <input type="radio" name="mood" value="awful">
+        <label for="awful"><span id="awfulRadio">awful</span></label>
     </fieldset>
 </form>
-<form action="">
+<form action="" id="searchContainer">
     <label for="search">Search Entries</label>
     <input type="text" id="searchEntries">
 
